fix: timetables 반환값 수정 (#294)
* refactor: 반환값 형태 수정

* test: 테스트 값 수정

* test: 주석 제거

* refactor: trim -> strip 으로 변경

* test: 로그 제거