@@ -3,7 +3,6 @@ package in.koreatech.koin.domain.activity.service;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -35,7 +34,7 @@ public class ActivityService {
                 List<String> imageUrlsList = parseImageUrls(activity.getImageUrls());
                 return ActivityResponse.of(activity, imageUrlsList);
             })
-            .collect(Collectors.toList());
+            .toList();
 
         return new ActivitiesResponse(activityResponseList);
     }
@@ -46,8 +45,8 @@ public class ActivityService {
         }
 
         return Arrays.stream(imageUrls.split(","))
-            .map(String::trim)
+            .map(String::strip)
             .map(url -> url.replace("\n", "").replace("\r", "")) // 개행 문자 제거
-            .collect(Collectors.toList());
+            .toList();
     }
 }
